# MPM-Smart

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Mpm-Smart.sln  Mpm-Smart.slnx  MpmSmart.sln  README.md  SECURITY.md  docker-compose.yaml
.github/workflows/: docs-pages.yaml  docs.yaml  dotnet.yml
Mpm-Smart/: .gitignore  Makefile  Mpm-Smart.sln  azure.yaml  docker-compose.yml
Mpm-Smart/ActuatorModule/: Class1.cs
Mpm-Smart/AdminDashboard/: AdminDashboard.csproj  Dockerfile  Program.cs
Mpm-Smart/ApiGatewaySchema/: Class1.cs
Mpm-Smart/AuthService/: AuthService.csproj  Program.cs
Mpm-Smart/CameraPlugin/: Class1.cs
Mpm-Smart/CommandService/: CommandService.csproj  Dockerfile  Program.cs
Mpm-Smart/CommunicationModule/: Class1.cs
Mpm-Smart/ComponentLib/: Component1.razor  ComponentLib.csproj  ExampleJsInterop.cs
Mpm-Smart/ControllerModule/: Class1.cs
Mpm-Smart/CoreModule/: Class1.cs  CoreModule.csproj  CoreModuleImpl.cs
Mpm-Smart/DataGatewaySchema/: Class1.cs
Mpm-Smart/DataModel/: Class1.cs  DataModel.csproj
Mpm-Smart/DbManager/: DbInitializer.cs  DbInitializerHealthCheck.cs  DbManager.csproj  Program.cs
Mpm-Smart/EthernetPlugin/: Class1.cs
Mpm-Smart/GatewayModule/: Class1.cs
Mpm-Smart/HomeDataService/: Dockerfile  HomeDataService.csproj  (+1 more)
docs/: pdfSourceIN.html
src/micro/esp32/application/: Application.cpp  CMakeLists.txt  File.cpp  SystemConfig.cpp  application.c  crypto.c  file.c  system_config.c
src/micro/esp32/application/include/: Application.hpp  File.hpp  SystemConfig.hpp  application.h  crypto.h  file.h  system_config.h
(+808 files in other folders)
